feat: Add alternative JSON writing methods and remove Apache Commons IO dependency
- Added three alternative JSON writing approaches to EmployeeFileWriter:
  - String.join() with manual brackets
  - Collectors.joining() with automatic brackets (recommended)
  - StringJoiner for maximum control
- Removed Apache Commons IO dependency, using pure Java NIO.2 instead
- Changed CSV writing to use %n format specifier for consistency
- Created EmployeeFileWriterTest to verify all JSON methods produce equivalent output
- Fixed resource leak in test cleanup (Files.walk in try-with-resources)
- Created JsonWritingComparison demo to show different approaches
- Updated all methods to take explicit directory parameter instead of nulls
- All approaches produce identical, properly formatted JSON output

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>